--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,22 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>{% block title %}TDH Shop{% endblock %}</title>
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
-
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+            integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+            crossorigin="anonymous">
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
-    </body>
+        {% block header %}
+            <nav class="navbar navbar-dark bg-dark sticky-top">
+            <a href="{{ path('app_home') }}" class="navbar-brand">
+                TDH Shop
+            </a>
+            </nav>
+        {% endblock %}
+{% block body %}{% endblock %}
+</body>
 </html>
