add product,order and orderItem

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,7 +7,7 @@
         {% for product in Product %}
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="https://via.placeholder.com/200x150" alt="{ product.image }" class="card-img-top">
+                    <img src="https://ae01.alicdn.com/kf/S673839974e0d443eb316e164d8e48652Y/UNI-T-UTI220B-Nhi-t-Imager-200X150-i-m-nh-Nhi-t-In-H-nh-M.jpg_.webp" alt="{ product.image }" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">{ product.title }</h5>
                         <p class="card-text">{ product.description}</p>
