--- a/templates/product_detail/index.html.twig
+++ b/templates/product_detail/index.html.twig
@@ -1,18 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ product.name }}{% endblock %}
+{% block title %}{{ product.ProductTitle }}{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="row mt-3 mb-4">
             <div class="col-md-4">
-                <img src="https://via.placeholder.com/600x400" alt="{{ product.name }}" class="img-fluid">
+                <img src="https://via.placeholder.com/600x400" alt="{{ product.ProductImage }}" class="img-fluid">
             </div>
             <div class="col-md-8">
-                <h1 class="mt-4 mt-md-0">{{ product.name }}</h1>
-                <h2>{{ product.price }} €</h2>
+                <h1 class="mt-4 mt-md-0">{{ product.productTitle }}</h1>
+                <h2>{{ product.productPrice }} €</h2>
                 <hr>
-                <b>Description: </b>{{ product.description }}
+                <b>Description: </b>{{ product.productDescription }}
                 <form class="mt-4 p-4 bg-light" method="post">
                     <div class="form-group">
                         <label for="quantity">Quantity</label>
