--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,7 +12,7 @@
                         <h5 class="card-title">{{ product.productTitle }}</h5>
                         <p class="card-text">{{ product.productDescription }}</p>
                         <div class="d-flex justify-content-between align-item-center">
-                            <a href="#" class="btn btn-dark">View details</a>
+                            <a href="/product/{{product.id}}" class="btn btn-dark">View details</a>
                             <span class="h5 mt-auto">{{ product.productPrice }} $</span>
                         </div>
                     </div>
